--- a/resources/sass/application.scss
+++ b/resources/sass/application.scss
@@ -1,8 +1,8 @@
-@import 'bootstrap';
-@import "font-awesome-sprockets";
-@import "font-awesome";
+$fa-font-path: "/public/fonts/vendor/font-awesome" !default;
+
+@import "~bootstrap/scss/bootstrap";
+@import "~font-awesome/scss/font-awesome";
 @import 'nav';
-@import 'hero';
 @import 'portfolio';
 @import url('https://fonts.googleapis.com/css?family=NTR|Reenie+Beanie');
 
