--- a/resources/sass/application.scss
+++ b/resources/sass/application.scss
@@ -2,6 +2,7 @@
 @import "~font-awesome/scss/font-awesome";
 @import 'nav';
 @import 'portfolio';
+@import 'hero';
 @import url('https://fonts.googleapis.com/css?family=NTR|Reenie+Beanie');
 
 html, body {
